Fixed armor glitching bug.
Note: The entire Demon set was deleted then readded, so updating to this version may break your old armor set, unknown.

--- a/Server/Languages/en-US/server.lang
+++ b/Server/Languages/en-US/server.lang
@@ -1,5 +1,7 @@
 items.DemonLeggings.name = Daemon Sabatons
 items.DemonHelm.name = Daemon Helm
+items.GluttonHelm.name = Gluttonous Helm
+items.CyclopsHelm.name = Cyclops Helm
 items.DemonHelmOpened.name = Daemon Helm (Open)
 items.DemonChestplate.name = Daemon Chestguard
 items.DemonGauntlets.name = Daemon Gauntlets
