Updated to Version 3
Updated to Version 3
Added the Rook Armor Set
All variants now crafted through the builder station.

--- a/Server/Languages/en-US/server.lang
+++ b/Server/Languages/en-US/server.lang
@@ -49,3 +49,28 @@ items.PurpleWizenedSleeves.name = Purple Wizened Sleeves
 items.PinkWizenedJacket.name = Pink Wizened Jacket
 items.YellowWizenedJacket.name = Yellow Wizened Jacket
 items.PurpleWizenedJacket.name = Purple Wizened Jacket
+
+items.RookHelmGreen.name = Green Rook Helm
+items.RookHelmGreenOpened.name = Green Rook Helm (Opened)
+items.RookHelmRed.name = Red Rook Helm
+items.RookHelmRedOpened.name = Red Rook Helm (Opened)
+items.RookHelmAzure.name = Azure Rook Helm
+items.RookHelmAzureOpened.name = Azure Rook Helm (Opened)
+items.RookHelmRusty.name = Rusty Rook Helm
+items.RookHelmRustyOpened.name = Rusty Rook Helm (Opened)
+
+items.RookChestRusty.name = Rusty Rook Chest
+items.RookBootsRusty.name = Rusty Rook Boots
+items.RookGauntletsRusty.name = Rusty Rook Gauntlets
+
+items.RookChestRed.name = Red Rook Chest
+items.RookBootsRed.name = Red Rook Boots
+items.RookGauntletsRed.name = Red Rook Gauntlets
+
+items.RookChestAzure.name = Azure Rook Chest
+items.RookBootsAzure.name = Azure Rook Boots
+items.RookGauntletsAzure.name = Azure Rook Gauntlets
+
+items.RookChestGreen.name = Green Rook Chest
+items.RookBootsGreen.name = Green Rook Boots
+items.RookGauntletsGreen.name = Green Rook Gauntlets
