Hold Animation Fix
Fixed the hold positions of all armors.

--- a/Server/Languages/en-US/server.lang
+++ b/Server/Languages/en-US/server.lang
@@ -58,6 +58,10 @@ items.RookHelmAzure.name = Azure Rook Helm
 items.RookHelmAzureOpened.name = Azure Rook Helm (Opened)
 items.RookHelmRusty.name = Rusty Rook Helm
 items.RookHelmRustyOpened.name = Rusty Rook Helm (Opened)
+items.RookHelmBlack.name = Black Rook Helm
+items.RookHelmBlackOpened.name = Black Rook Helm (Opened)
+items.RookHelmPurple.name = Purple Rook Helm
+items.RookHelmPurpleOpened.name = Purple Rook Helm (Opened)
 
 items.RookChestRusty.name = Rusty Rook Chest
 items.RookBootsRusty.name = Rusty Rook Boots
@@ -74,3 +78,11 @@ items.RookGauntletsAzure.name = Azure Rook Gauntlets
 items.RookChestGreen.name = Green Rook Chest
 items.RookBootsGreen.name = Green Rook Boots
 items.RookGauntletsGreen.name = Green Rook Gauntlets
+
+items.RookChestBlack.name = Black Rook Chest
+items.RookBootsBlack.name = Black Rook Boots
+items.RookGauntletsBlack.name = Black Rook Gauntlets
+
+items.RookChestPurple.name = Purple Rook Chest
+items.RookBootsPurple.name = Purple Rook Boots
+items.RookGauntletsPurple.name = Purple Rook Gauntlets
